@@ -572,9 +572,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <value>a <see cref="T:Pango.EllipsizeMode" /></value>
-        <remarks>To be added</remarks>
+        <summary>Specifies the preferred place to ellipsize the string, if the cell renderer does not have enough room to display the entire string.</summary>
+        <value>A <see cref="T:Pango.EllipsizeMode" />.</value>
+        <remarks>Setting it to <see cref="E:Pango.EllipsizeMode.None" /> turns off ellipsizing. See the <see cref="P:Gtk.CellRendererText.WrapWidth" /> property for another way of making the text fit in a given width.</remarks>
         <since version="Gtk# 2.6" />
       </Docs>
       <Attributes>
@@ -591,9 +591,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <value>a <see cref="T:System.Int32" /></value>
-        <remarks>To be added</remarks>
+        <summary>The desired width of the cell, in characters.</summary>
+        <value>A <see cref="T:System.Int32" /> that is equal or greater than -1.</value>
+        <remarks>If this property is set to -1, the width will be calculated automatically, otherwise the cell will request either 3 characters or the property value, whichever is greater. It's default value is -1.</remarks>
         <since version="Gtk# 2.6" />
       </Docs>
       <Attributes>
